@@ -1,6 +1,8 @@
 * Unreleased
 - Expose ~fancy-yank-format-link-rules~ allowing to configure
   ~fancy-yank-format-link~.
+- Allow to override function for extracting title from HTTP URL by exposing
+  ~fancy-yank-extract-http-title-f~ variable.
 
 * ~v0.0.3~
 - Use ~substring-no-properties~ on the content of the buffer, before passing it
